demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-demo
  labels:
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
  namespace: istio-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'api.istio.demo'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - 'api.istio.demo'
    port:
      name: api
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-demo
  namespace: istio-demo
spec:
  gateways:
  - demo-gateway
  hosts:
  - api.istio.demo
  http: 
  - name: account-http
    match:
    - uri:
        prefix: /v1/accounts
    route:
    - destination:
        host: account.istio-demo.svc.cluster.local
        port: 
          number: 8080
  - name: account-grpc
    match:
    - uri:
        prefix: /api.Account
    - uri:
        prefix: /grpc.reflection
    route:
    - destination:
        host: account.istio-demo.svc.cluster.local
        port: 
          number: 8000
  - name: user-http
    match:
    - uri:
        prefix: /v1/users
    route:
    - destination:
        host: user.istio-demo.svc.cluster.local
        port: 
          number: 8080
  - name: user-grpc
    match:
    - uri:
        prefix: /api.User
    route:
    - destination:
        host: user.istio-demo.svc.cluster.local
        port: 
          number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: accounts
  namespace: istio-demo
spec:
  hosts:
  - account.istio-demo.svc.cluster.local
  http: 
  - route:
    - destination:
        host: account.istio-demo.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users
  namespace: istio-demo
spec:
  hosts:
  - user.istio-demo.svc.cluster.local
  http: 
  - route:
    - destination:
        host: user.istio-demo.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auths
  namespace: istio-demo
spec:
  hosts:
  - auth.istio-demo.svc.cluster.local
  http: 
  - name: auth-grpc
    match:
    - uri:
        prefix: /api.Auth
    route:
    - destination:
        host: auth.istio-demo.svc.cluster.local
        port: 
          number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-master
  namespace: istio-demo
spec:
  hosts:
  - redis5-master.redis.svc.cluster.local
  tcp:
  - match:
    - port: 6379
    route:
    - destination:
        host: redis5-master.redis.svc.cluster.local
        port:
          number: 6379
