redis-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-master
  namespace: istio-demo
spec:
  hosts:
  - redis5-master.redis.svc.cluster.local
  tcp:
  - match:
    - port: 6379
    route:
    - destination:
        host: redis5-master.redis.svc.cluster.local
        port:
          number: 6379
